--- a/package.json
+++ b/package.json
@@ -23,19 +23,20 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@pinecone-database/pinecone": "^2.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "openai": "^4.28.0",
-    "@pinecone-database/pinecone": "^2.0.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.28.0",
+    "pdf-parse": "^1.1.1",
+    "winston": "^3.17.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.0",
     "@types/pdf-parse": "^1.1.1",
